--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test git</title>
 </head>
 <body>
-    <H1>GIT GUD</H1>
+    <h1>GIT GUD</h1>
     <p>dwiwd</p>
     <button>click me!</button>
 </body>
