Changed paragraph text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>GIT GUD</h1>
-    <p>dwiwd</p>
+    <p>Here's how to git gud</p>
     <button>click me!</button>
 </body>
 </html>
